--- a/stylesheets/_bchat_left_pane.scss
+++ b/stylesheets/_bchat_left_pane.scss
@@ -741,7 +741,8 @@ $bchat-compose-margin: 20px;
       margin-left: 5px;
     background-color: #9494A0;
     height: 11px;
-    border-radius: 2px;
+    // border-radius: 2px;
+    border-radius: 4px;
     padding: 0 5px;
     font-size: 8px;
     font-family: "poppin-semibold";
